--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <h1>Welcome to Our Website</h1>
-      <p>We build modern solutions for your business</p>
+      <p>We build modern solutions for </p>
       <a href="#services" class="btn">Explore Services</a>
     </div>
   </section>
